[gd_scene load_steps=2 format=3 uid="uid://jpl3dogotwxc"]

[ext_resource type="Script" path="res://SCENES/connection.gd" id="1_4yggi"]

[node name="Connection" type="VBoxContainer"]
size_flags_horizontal = 3
alignment = 1
script = ExtResource("1_4yggi")

[node name="UserName" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "USER NAME"
alignment = 1

[node name="IPAddress" type="LineEdit" parent="."]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP ADRESS"
alignment = 1

[node name="Port" type="LineEdit" parent="."]
layout_mode = 2
text = "1234"
placeholder_text = "PORT"
alignment = 1

[node name="HostButton" type="Button" parent="."]
layout_mode = 2
text = "HOST"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 2
text = "JOIN
"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_button_down"]
